# Meme-Downloader

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tmpclaude-2d13-cwd
.claude/: settings.local.json
docs/: usage.md
docs/plans/: 2026-04-15-meme-downloader-design.md  2026-04-15-meme-downloader-implementation.md
src/meme_downloader/: __init__.py  config.py
src/meme_downloader/bot/: __init__.py  bot.py  plugin.py
src/meme_downloader/cli/: main.py  utils.py
src/meme_downloader/db/: database.py
src/meme_downloader/fetchers/: base.py  gengtu.py  imgur.py  reddit.py  registry.py
src/meme_downloader/vector/: __init__.py  embedding.py  store.py
