[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meme-downloader"
version = "0.1.0"
description = "A tool for fetching and managing internet memes"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
bot = [
    "nonebot2>=2.3",
    "nonebot-adapter-onebot>=2.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
meme = "meme_downloader.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/meme_downloader"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
